<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title fir the crime.</string>
    <string name="crime_title_label">Titles</string>
    <string name="crime_detail_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="choose_suspect">Choose suspect</string>
    <string name="send_crime_report">Send Crime report</string>
    <string name="crime_report"> %1$s!
        The crime was discovered on %2$s, %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved.</string>
    <string name="crime_report_unsolved">The case is not solved.</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">Tthe suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="date_picker_title">Date of crime:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
